Use KUriFilter to expand the query, in order to support complex substitutions.

BUG:242156

svn path=/trunk/KDE/kdebase/workspace/; revision=1144555